# trustgraph-finance-copilot

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
data/: README_DATA.md
data/processed/: corpus.jsonl
data/sql/: seed.sql
scripts/: rq_lab.py
src/trustgraph/: config.py  eval.py  generation.py  indexes.py  rrf.py  sec_ingest.py  sqlstore.py  verification.py
